@@ -1,3 +1,7 @@
+2002-08-30  Thimo Neubauer  <thimo@debian.org>
+
+        * games/solitaire.c: abort dragging if another button is clicked
+	
 2002-04-19  Thimo Neubauer  <thimo@debian.org>
 
 	* lib/xwin.c (xwin_init): Check for no DISPLAY.
